[package]
name = "yew-wordle"
version = "0.1.0"
edition = "2018"

[dependencies]
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
log = "0.4.22"
wasm-logger = "0.2"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Document", "HtmlElement", "Node"] }
rand = "0.8.5"
gloo = { version = "0.11.0", features = ["futures"] }
wasm-bindgen-futures = "0.4"

[lib]
crate-type = ["cdylib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false